# sftp-watch

./: .gitignore  .gitlab-ci.yml  CHANGELOG.MD  CMakeLists.txt  LICENSE  README.MD  index.d.ts  main.js  package-lock.json  package.json  tsconfig.json  typedoc.json
exports/: index.cjs  index.d.ts  index.ts
sample/: config.sample.js  config.sample.json  index.js  index.mjs  index.ts  package.json  sample.js  tsconfig.json
src/: .clang-format  .lint  debug.hpp  sftp_err.cc  sftp_err.hpp  sftp_helper.cc  sftp_helper.hpp  sftp_local.cc  sftp_local.hpp  sftp_node.cc  sftp_node.hpp  sftp_node_api.cc  sftp_node_api.hpp  sftp_nonblock.cc  sftp_remote.cc  sftp_remote.hpp  sftp_watch.cc  sftp_watch.hpp
